--- a/client/public/styles.scss
+++ b/client/public/styles.scss
@@ -197,56 +197,101 @@ table {
 // HOME PAGE END
 
 // NAVBAR START
+// .navBar {
+//   color: white;
+//   background-color: #282426;
+//   display: grid;
+//   grid-template-columns: 1fr 1fr 1fr;
+//   align-items: center;
+//   padding-left: 5rem;
+//   height: 7rem;
+
+//   .leftImage {
+//     width: 100px;
+//     height: 100px;
+//   }
+
+//   .middleImage {
+//     width: 400px;
+//     height: 100px;
+//   }
+
+//   .teamAndAboutNeighbor {
+//     text-align: center;
+//   }
+
+//   .teamImage {
+//     padding-left: 10rem;
+//   }
+
+//   .aboutNeighborImage {
+//     padding-left: 1rem;
+//     width: 200px;
+//     height: 30px;
+//   }
+// }
+
 .navBar {
-  color: white;
   background-color: #282426;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
   align-items: center;
-  padding-left: 5rem;
   height: 7rem;
 
+  .leftNav {
+    display: flex;
+    float: left;
+    padding-left: 10px;
+    padding-right: 90px;
+  }
+
+  .spacer {
+    width: 100%;
+  }
   .leftImage {
-    width: 100px;
-    height: 100px;
+    width: 75px;
+    height: auto;
   }
 
-  .middleImage {
+  .siteFontLogo {
     width: 400px;
-    height: 100px;
+    height: auto;
   }
 
-  .teamAndAboutNeighbor {
-    text-align: center;
+  .rightNav {
+    display: flex;
+    float: right;
+    padding-right: 10px;
   }
 
   .teamImage {
-    padding-left: 10rem;
+    height: 20px;
+    width: auto;
   }
-
   .aboutNeighborImage {
-    padding-left: 1rem;
-    width: 200px;
-    height: 30px;
+    height: 20px;
+    width: auto;
   }
 }
+
 // NAVBAR END
 
-// LOGIN PAGE AND CREATE ACCOUNT PAGE START
+// LOGIN PAGE START
 .login {
   text-align: center;
-  margin-top: 7rem;
+  margin-top: 12rem;
   font-size: 2.5rem;
 }
 
 .loginContainer {
   padding-left: 2em;
-  margin-top: 10rem;
+  margin-top: 7rem;
   text-align: center;
-  .consumerAlignment {
-    text-align: left;
-    margin-left: 7rem;
-  }
+
+  // .consumerAlignment {
+  //   text-align: left;
+  //   margin-left: 7rem;
+  // }
+
   .consMerchContainer {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -264,8 +309,10 @@ table {
     padding-right: 0.5em;
   }
 
+  // CAN THE TWO BELOW BE COMBINED?
+
   .userLogin {
-    font-size: 1.5rem;
+    // font-size: 1.5rem;
     #userInput {
       border-radius: 4rem;
       height: 1.25rem;
@@ -273,7 +320,7 @@ table {
   }
 
   .userPW {
-    font-size: 1.5rem;
+    // font-size: 1.5rem;
     #userPW {
       border-radius: 4rem;
       height: 1.25rem;
@@ -282,16 +329,17 @@ table {
 
   .merchantLogin {
     border-left: 2px solid black;
-    font-size: 1.5rem;
+    // font-size: 1.5rem;
 
-    .merchantForm {
-      text-align: left;
-      margin-left: 12rem;
-    }
+    // .merchantForm {
+    //   margin-top: 1rem;
+    //   text-align: left;
+    //   margin-left: 12rem;
+    // }
 
     .merchantAlignment {
-      text-align: left;
-      margin-left: 8rem;
+      // text-align: left;
+      // margin-left: 8rem;
     }
     #merchantUsername {
       border-radius: 4rem;
@@ -303,9 +351,16 @@ table {
     }
   }
 }
-// LOGIN PAGE AND CREATE ACCOUNT PAGE END
+// LOGIN PAGE END
 
-// CREATE ACCOUNT PAGE BUSINESS INFO START
+// CREATE ACCOUNT PAGE START
+
+.createAccount {
+  text-align: center;
+  margin-top: 5rem;
+  font-size: 2.5rem;
+}
+
 .businessInfo {
   font-size: 1.5rem;
   .merchantBusinessName {
@@ -326,7 +381,16 @@ table {
     }
   }
 }
+
 // CREATE ACCOUNT PAGE BUSINESS INFO END
+
+// GENERAL BUTTON STYLING START
+
+#formButton {
+  font-family: roboto slab;
+  color: rgb(40, 38, 38);
+  background-color: white;
+}
 
 // all form inputs
 form {
@@ -337,3 +401,129 @@ form {
   }
 }
 
+// GENERAL BUTTON STYLING END
+
+// LANDING PAGE
+
+// outer box for all market cards 
+.merchantWrapper {
+  display: flex;
+  flex: 0 0 0 0 20%;
+  flex-wrap: wrap;
+}
+
+// box for each individual merchant card 
+.cardWrapper {
+  display: flex;
+  flex-direction: row;
+  background-color: #282426;
+  height: 250px;
+  width: 250px;
+  margin: 25px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
+    rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+// location and size styling for merchant cards 
+.eachMerchantImage {
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+  height: 230px;
+  width: 230px;
+}
+
+#merchantImage {
+  display: block;
+  border-radius: 10px;
+}
+
+// search bar styling 
+.searchBar {
+  margin-top: 20px;
+  text-align: center;
+}
+
+//  TEAM PAGE STARTS HERE
+
+// individual team photo 
+.teamPhoto {
+  height: 200px;
+  width: auto;
+  padding: 40px;
+}
+
+// styling for all four team photos
+.allTeamPhotos {
+  padding-top: 70px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+// text underneath each photo 
+.teamText {
+  text-align: center;
+}
+
+
+// ABOUT US START
+
+// outmost container
+.aboutUsContainer {
+  display: flex;
+  margin: auto; 
+  margin-top: 150px; 
+  justify-content: center;
+  align-items: center;
+}
+
+// styling for the text box 
+.aboutUsTextContainer {
+  background-color: #f8f6f6;
+  height: 400px; 
+  width: 650px; 
+  border-radius: 30px; 
+  margin: auto; 
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  justify-content: center;
+  align-items: center;
+  line-height: 23px;
+  padding: 50px; 
+  overflow: scroll; 
+}
+
+// about us text logo in the text box 
+#aboutUsLogo {
+  height: 30px;
+  width: auto;
+}
+
+.userInformationContainer {
+  display: flex;
+  margin: auto; 
+  margin-top: 150px; 
+  justify-content: center;
+  align-items: center;
+}
+
+.userInformationTextContainer {
+
+  background-color: #f8f6f6;
+  height: 300px; 
+  width: 650px; 
+  border-radius: 30px; 
+  margin: auto; 
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  justify-content: center;
+  align-items: center;
+  line-height: 23px;
+  padding: 50px; 
+  overflow: scroll; 
+}
+
+#userLogo {
+  height: 50px;
+}
